--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     implementation 'com.rmtheis:tess-two:9.0.0'
     implementation 'com.google.cloud:google-cloud-storage:1.82.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.gms:play-services-ads:18.1.1'
 }
